build_log.txt
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by net.rubygrapefruit.platform.internal.NativeLibraryLoader in an unnamed module (file:/C:/Users/Acer/.gradle/wrapper/dists/gradle-9.0.0-bin/d6wjpkvcgsg3oed0qlfss3wgl/gradle-9.0.0/lib/native-platform-0.22-milestone-28.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled

> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:extractDebugPythonBuildPackages UP-TO-DATE
> Task :app:installDebugPythonRequirements UP-TO-DATE
> Task :app:mergeDebugPythonSources UP-TO-DATE
> Task :app:generateDebugPythonProxies UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:kaptGenerateStubsDebugKotlin UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:generateDebugPythonMiscAssets UP-TO-DATE
> Task :app:generateDebugPythonRequirementsAssets UP-TO-DATE
> Task :app:generateDebugPythonSourceAssets UP-TO-DATE
> Task :app:generateDebugPythonBuildAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:checkDebugDuplicateClasses UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:mergeExtDexDebug UP-TO-DATE
> Task :app:mergeLibDexDebug UP-TO-DATE
> Task :app:generateDebugPythonJniLibs UP-TO-DATE
> Task :app:mergeDebugJniLibFolders UP-TO-DATE
> Task :app:mergeDebugNativeLibs UP-TO-DATE
> Task :app:stripDebugDebugSymbols UP-TO-DATE
> Task :app:validateSigningDebug UP-TO-DATE
> Task :app:writeDebugAppMetadata UP-TO-DATE
> Task :app:writeDebugSigningConfigVersions UP-TO-DATE

> Task :app:kaptDebugKotlin FAILED
D:\tu_projects\SilentPipe\app\src\main\java\com\tuhoang\silentpipe\ui\main\MainActivity.java:596: error: 'try' without 'catch', 'finally' or resource declarations
                            try {
                            ^
D:\tu_projects\SilentPipe\app\src\main\java\com\tuhoang\silentpipe\ui\main\MainActivity.java:670: error: 'catch' without 'try'
                            } catch (Exception e) {
                              ^
D:\tu_projects\SilentPipe\app\src\main\java\com\tuhoang\silentpipe\ui\main\MainActivity.java:673: error: ')' or ',' expected
                        }
                         ^
D:\tu_projects\SilentPipe\app\src\main\java\com\tuhoang\silentpipe\ui\main\MainActivity.java:674: error: illegal start of expression
                    });
                     ^
D:\tu_projects\SilentPipe\app\src\main\java\com\tuhoang\silentpipe\ui\main\MainActivity.java:560: error: 'try' without 'catch', 'finally' or resource declarations
            try {
            ^
D:\tu_projects\SilentPipe\app\src\main\java\com\tuhoang\silentpipe\ui\main\MainActivity.java:675: error: 'else' without 'if'
                } else if (errorObj != null && !errorObj.toString().equals("None")) {
                  ^
D:\tu_projects\SilentPipe\app\src\main\java\com\tuhoang\silentpipe\ui\main\MainActivity.java:682: error: ')' or ',' expected
            } catch (Throwable e) {
             ^
D:\tu_projects\SilentPipe\app\src\main\java\com\tuhoang\silentpipe\ui\main\MainActivity.java:682: error: 'catch' without 'try'
            } catch (Throwable e) {
              ^
D:\tu_projects\SilentPipe\app\src\main\java\com\tuhoang\silentpipe\ui\main\MainActivity.java:686: error: illegal start of type
        });
         ^
D:\tu_projects\SilentPipe\app\src\main\java\com\tuhoang\silentpipe\ui\main\MainActivity.java:688: error: class, interface, or enum expected
}
^

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:kaptDebugKotlin'.
> A failure occurred while executing org.jetbrains.kotlin.gradle.internal.KaptWithoutKotlincTask$KaptExecutionWorkAction

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

BUILD FAILED in 2s
41 actionable tasks: 1 executed, 40 up-to-date
